# muEDM_Analysis

./: .clang-format  .gitignore  CHeTGlobalSettings_8cc.html  CHeTGlobalSettings_8cc__incl.map  CHeTGlobalSettings_8cc__incl.md5  CHeTGlobalSettings_8cc_source.html  CHeTGlobalSettings_8hh.html  CHeTGlobalSettings_8hh__dep__incl.map  CHeTGlobalSettings_8hh__dep__incl.md5  CHeTGlobalSettings_8hh__incl.map  CHeTGlobalSettings_8hh__incl.md5  CHeTGlobalSettings_8hh_source.html  CHeTReader_8cc.html  CHeTReader_8cc__incl.map  CHeTReader_8cc__incl.md5  CHeTReader_8cc_source.html  CHeTReader_8hh.html  CHeTReader_8hh__dep__incl.map  CHeTReader_8hh__dep__incl.md5  CHeTReader_8hh__incl.map  CHeTReader_8hh__incl.md5  CHeTReader_8hh_source.html  CHeTVisualizer_8cc.html  CHeTVisualizer_8cc__incl.map  CHeTVisualizer_8cc__incl.md5  CHeTVisualizer_8cc_source.html  CHeTVisualizer_8hh.html  CHeTVisualizer_8hh__dep__incl.map  CHeTVisualizer_8hh__dep__incl.md5  CHeTVisualizer_8hh__incl.map  CHeTVisualizer_8hh__incl.md5  CHeTVisualizer_8hh_source.html  LinkDef_8h.html  LinkDef_8h_source.html  README.md  analyzer_work.cc  annotated.html  classCHeT_1_1Data_1_1Reader-members.html  classCHeT_1_1Data_1_1Reader.html  classes.html  (+67 more)
.github/workflows/: documentation.yml
CHeTLibrary/: CMakeLists.txt  Doxyfile
CHeTLibrary/docs/: doxygen_custom.css  mainpage.dox
CHeTLibrary/include/CHeT/: CHeTGlobalSettings.hh  CHeTReader.hh  CHeTVisualizer.hh  LinkDef.h
CHeTLibrary/src/: CHeTGlobalSettings.cc  CHeTReader.cc  CHeTVisualizer.cc
DAQ_Unpacker/: AcquisitionModes.py  Read_Midas_Root.py
Distiller/: CMakeLists.txt  distiller.cc
Distiller/include/: lbrootstyle.hh
Fitter/: .gitignore  .rootlogon.C  CHeTFitter.cc  CMakeLists.txt  myfitter.cc  run_parallel.sh
Fitter/geometry/: BT25v2_run3_g-2.gdml  chet_sim_geometry.gdml
Fitter/include/: analyticviewer.hh  auxiliaryalgorithms.hh  config.hh  fitteralgorithms.hh  globalsettings.hh  patternalgorithms.hh  trackdatamanager.hh
Fitter/macros/: edm_tracker.mac
Fitter/src/: auxiliaryalgorithms.cc  fitteralgorithms.cc  globalsettings.cc  patternalgorithms.cc  trackdatamanager.cc
ToyMC/: CMakeLists.txt  toymc.cc
ToyMC/data/: cosmic_toy.root  cosmictoy0000.root  micheltoy0000.root
ToyMC/include/: ToyGenerator.hh
ToyMC/src/: ToyGenerator.cc
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+28 more)
